--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -199,6 +199,7 @@ es:
   refresh_or_wait: Si no se muestra automáticamente en unos segundos, presioná F5
   reset_query: Borrar los filtros de búsqueda actuales
   restart: Reiniciar
+  results_hidden: ¡Tu solución fue enviada con éxito!
   results: Resultados
   retry_exercise: Reintentar
   running: procesando
