Adding missing translation for skipped status

--- a/lib/mumuki/laboratory/locales/pt.yml
+++ b/lib/mumuki/laboratory/locales/pt.yml
@@ -204,6 +204,7 @@ pt:
   sign_in_action: iniciar sessão
   sign_out: Fechar Sessão
   sign_up_date: Usuário de
+  skipped: Você está aprendendo muito bem e passou neste exercício.
   skipped_congratulations: Bem feito!
   skipped_description: Você está aprendendo muito bem e passou neste exercício.
   skipped_solve_anyway: Resolver mesmo assim
