--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -57,6 +57,7 @@ en:
   destroy_message: delete the message
   destroy: Destroy
   disabled_explanation: You are trying to visit a permamently disabled or deleted resource
+  disabled_organization_explanation: This path has already finished.
   discussion_updated: Discussion updated
   discussions: Discussions
   dont_leave_us: Don't leave us! Learning is fun. You just have to keep at it.
@@ -238,6 +239,7 @@ en:
   undo_upvote: Undo upvote
   unspecified: I'd rather not say
   unmeet_expectations: "Goals that weren't met"
+  unprepared_organization_explanation: This path hasn't started yet.
   unsubscribe: Unsubscribe
   unsubscribed_successfully: You have successfully unsubscribed from reminders.
   upload_solution: Upload Solution
