--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -64,6 +64,7 @@ es:
   destroy: Eliminar
   details: Detalles
   disabled_explanation: Estás intentando acceder a un recurso que fue deshabilitado o eliminado de forma permamente
+  disabled_organization_explanation: ¡Este recorrido ha finalizado!
   discussion_updated: Consulta actualizada
   discussions: Consultas
   dont_leave_us: ¡No nos abandones! Aprender a programar es divertido. Sólo tenés que seguir practicando.
@@ -98,7 +99,7 @@ es:
   format: Dar formato
   gender: Género
   go_to: 'Ir a %{organization}'
-  gone_explanation: ¡Ups! Esto es lo que se conoce como %{error}, es decir que ya no podés ver este contenido.
+  gone_explanation: Este contenido ya no está disponible.
   guide: Lección
   guide_created: Guía creada exitosamente
   guide_finished: ¡Terminaste %{guide}!
@@ -262,6 +263,7 @@ es:
   undo_upvote: No es útil
   unspecified: Prefiero no decirlo
   unmeet_expectations: Objetivos que no se cumplieron
+  unprepared_organization_explanation: ¡Este recorrido aún no ha comenzado!
   unsubscribe: Dejar de recibir notificaciones
   unsubscribed_successfully: Te desuscribiste exitosamente de los recordatorios.
   upload_solution: "Subir solución"
