--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -131,6 +131,7 @@ es:
   let_us_know: ¡Por favor avisanos!
   loading: Cargando
   load_solution_into_console: Cargar la solución en la consola
+  locked_content: 'Este contenido se desbloqueará cuando termines los capítulos anteriores'
   male: Hombre
   manual_evaluation_pending: ¡Gracias por enviar tu solución! Tus docentes la corregirán pronto
   message_count:
