--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -203,6 +203,8 @@ es:
   read_messages: Ver mensajes
   refresh_or_wait: Si no se muestra automáticamente en unos segundos, presioná F5
   reset_query: Borrar los filtros de búsqueda actuales
+  responses_count_asc: Con menos respuestas de moderadores
+  responses_count_desc: Con más respuestas de moderadores
   restart: Reiniciar
   results_hidden: ¡Tu solución fue enviada con éxito!
   results: Resultados
