Fixing locales boo-boo

--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -156,7 +156,7 @@ en:
   no_messages: It seems you don't have any messages yet!
   no_questions: It seems there isn't any question yet.
   no_submissions: It seems like you haven't tried to solve this exercise
-  no_useful_result: Não encontrou o que estava buscando?
+  no_useful_result: Didn't find what you were looking for?
   not_found_explanation: 'You may have mistyped the address or the page may have moved.'
   not_in_any_organizations: It seems you aren't in any organizations yet!
   notify_problem_with_exercise: Report a bug
