--- a/lib/mumuki/laboratory/locales/pt.yml
+++ b/lib/mumuki/laboratory/locales/pt.yml
@@ -164,7 +164,7 @@ pt:
   no_messages: Parece que você ainda não tem uma mensagem!
   no_questions: Parece que ainda não há dúvida.
   no_submissions: Parece que você ainda não tentou resolver este exercício!
-  no_useful_result: Didn't find what you were looking for
+  no_useful_result: Não encontrou o que estava buscando?
   not_found: A página que você pesquisou não existe!
   not_found_explanation: Olhe se você escreveu o endereço corretamente. Mas...
   not_in_any_organizations: Parece que você ainda não está em nenhuma organização!
