Using mentor instead of moderator visually

--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -134,7 +134,7 @@ en:
   messages: Messages
   messages_error: Previous messages are unavailable. Please try again later.
   more_messages: More
-  moderator: Moderator
+  moderator: Mentor
   mumuki_catchphrase: Improve your programming skills
   mumuki_short_description: Mumuki is a simple, open and collaborative platform for sharing and solving programming exercises. It is aimed to help people with learning and teaching programing languages and paradigms
   my_doubts: My doubts
