--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -146,7 +146,7 @@ es:
   minute: minuto
   minutes: minutos
   more_messages: Ver mensajes anteriores
-  moderator: Moderador
+  moderator: Mentor
   mumuki_catchphrase: Aprendé a programar
   mumuki_short_description: Mumuki es la plataforma libre y gratuita para aprender a programar, de la práctica a la teoría y en tu idioma
   my_doubts: Mis consultas
