--- a/lib/mumuki/laboratory/locales/pt.yml
+++ b/lib/mumuki/laboratory/locales/pt.yml
@@ -142,7 +142,7 @@ pt:
   minute: minuto
   minutes: minutos
   more_messages: Ver as mensagens anteriores
-  moderator: Moderador
+  moderator: Mentor
   mumuki_catchphrase: Aprendi a programar
   mumuki_short_description: Mumuki é a plataforma gratuita e gratuita para aprender a programar, desde a prática até a teoria e no seu idioma
   my_doubts: Minhas duvidas
