--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -7,6 +7,7 @@ en:
   actions: Actions
   activity: Activity
   actual_state: Obtained board
+  age: Age
   all: All
   appendix: "Appendix"
   appendix_teaser: Do you want to learn more? <a href="%{link}">Check this chapter's appendix</a>"
@@ -27,6 +28,7 @@ en:
   bibliotheca_ui: Bibliotheca
   birthdate: Birthdate
   blocked_forum_explanation: You are not allowed to see this content. <br> Are you in the middle of an exam right now?
+  cancel: Cancel
   cancel_subscription: Cancel your subscription.
   chapter: Chapter
   chapters: Chapters
@@ -93,7 +95,9 @@ en:
   first_name: First Name
   forbidden_explanation: You are not allowed to see this content.
   format: Format
+  fullscreen: "Fullscreen"
   gender: Gender
+  get_messages: "View messages"
   go_to: 'Go to %{organization}'
   gone_explanation: This content is no longer available.
   guide: Guide
@@ -161,6 +165,7 @@ en:
   not_in_any_organizations: It seems you aren't in any organizations yet!
   notify_problem_with_exercise: Report a bug
   office: Office
+  only_landscape_support: Please, rotate your tablet or cellphone to continue practicing
   opened: Open
   opened_count: '%{count} opened'
   other: Other
@@ -183,6 +188,7 @@ en:
   processing_your_solution: We are processing you solution
   profile: Profile
   profile_of: Profile of %{username}
+  programming_since: Started programming
   progress: Progresss
   read: Read
   refresh_or_wait: Please press F5 if results are not displayed after a few seconds
@@ -226,6 +232,7 @@ en:
   submissions_for: Submissions for %{exercise}
   subscribe: Subscribe
   tag: Tags
+  task: Task
   teacher_info: Information for teachers
   tell_us_how: Please tell us how this happened!
   tell_us_if_our_error: If you think this is our fault, %{issues}
@@ -258,9 +265,6 @@ en:
   we_miss_you: We miss you!
   working: "Working"
   wrong_answer: The answer is wrong
+  years: years old
   you_must_sign_in_before_submitting: You must sign in before submitting your solutions
   you_never_submitted_solutions: It seems that you've never submitted solutions since you created your account.
-  fullscreen: "Fullscreen"
-  get_messages: "View messages"
-  task: Task
-  only_landscape_support: Please, rotate your tablet or cellphone to continue practicing
