--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -7,6 +7,7 @@ es:
   actions: Acciones
   activity: Actividad
   actual_state: Tablero obtenido
+  age: Edad
   all: Todos
   and: y
   appendix: "Apéndice"
@@ -28,6 +29,7 @@ es:
   bibliotheca_ui: Biblioteca
   birthdate: Fecha de nacimiento
   blocked_forum_explanation: Es decir que no tenés autorización para ver este contenido. <br> ¿Puede que estés en medio de un examen?
+  cancel: Cancelar
   cancel_subscription: Cancelá tu subscripción.
   chapter: Capítulo
   chapters: Capítulos
@@ -99,7 +101,9 @@ es:
   first_name: Nombre
   forbidden_explanation: Es decir que no tenés autorización para ver este contenido. <br> ¿Puede que hayas ingresado con una cuenta incorrecta?
   format: Dar formato
+  fullscreen: "Pantalla completa"
   gender: Género
+  get_messages: "Ver mensajes"
   go_to: 'Ir a %{organization}'
   gone_explanation: Este contenido ya no está disponible.
   guide: Lección
@@ -175,6 +179,7 @@ es:
   not_in_any_organizations: ¡Parece que no estás en ninguna organización todavía!
   notify_problem_with_exercise: Reportá un bug
   office: Secretaría
+  only_landscape_support: Por favor, rotá tu tablet o celular para realizar ejercicios
   opened: Abierta
   opened_count:
     one: '1 abierta'
@@ -200,6 +205,7 @@ es:
   processing_your_solution: Estamos procesando tu solución
   profile: Perfil
   profile_of: Perfil de %{username}
+  programming_since: Programando desde
   progress: Progreso
   read: Leido
   read_messages: Ver mensajes
@@ -249,6 +255,7 @@ es:
   submissions_count: Soluciones
   submissions_for: Soluciones para %{exercise}
   tag: Etiquetas
+  task: Consigna
   teacher_info: Información para docentes
   tell_us_how: ¡Contanos cómo te pasó esto!
   tell_us_if_our_error: Si pensás que es un error nuestro, %{issues}
@@ -286,9 +293,6 @@ es:
     page_gap: "&hellip;"
   working: "Procesando"
   wrong_answer: La respuesta no es correcta
+  years: años
   you_must_sign_in_before_submitting: Tenés que iniciar sesión antes de empezar a enviar tus soluciones
   you_never_submitted_solutions: Parece que nunca enviaste soluciones desde que creaste tu cuenta.
-  fullscreen: "Pantalla completa"
-  get_messages: "Ver mensajes"
-  task: Consigna
-  only_landscape_support: Por favor, rotá tu tablet o celular para realizar ejercicios
