--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -7,6 +7,7 @@ en:
   actions: Actions
   activity: Activity
   actual_state: Obtained board
+  age: Age
   all: All
   appendix: "Appendix"
   appendix_teaser: Do you want to learn more? <a href="%{link}">Check this chapter's appendix</a>"
@@ -28,6 +29,7 @@ en:
   bibliotheca_ui: Bibliotheca
   birthdate: Birthdate
   blocked_forum_explanation: You are not allowed to see this content. <br> Are you in the middle of an exam right now?
+  cancel: Cancel
   cancel_subscription: Cancel your subscription.
   chapter: Chapter
   chapters: Chapters
@@ -189,6 +191,7 @@ en:
   processing_your_solution: We are processing you solution
   profile: Profile
   profile_of: Profile of %{username}
+  programming_since: Started programming
   progress: Progresss
   read: Read
   refresh_or_wait: Please press F5 if results are not displayed after a few seconds
@@ -269,6 +272,7 @@ en:
   welcome: Welcome to %{name}!
   working: "Working"
   wrong_answer: The answer is wrong
+  years: years old
   you_must_sign_in_before_submitting: You must sign in before submitting your solutions
   you_never_submitted_solutions: It seems that you've never submitted solutions since you created your account.
   your_new_organization: your new organization
