--- a/lib/mumuki/laboratory/locales/datetime.es.yml
+++ b/lib/mumuki/laboratory/locales/datetime.es.yml
@@ -3,23 +3,23 @@ es:
   datetime:
     distance_in_words:
       about_x_hours:
-        one: aproximádamente 1 hora
-        other: aproximádamente %{count} horas
+        one: aproximadamente una hora
+        other: aproximadamente %{count} horas
       about_x_months:
-        one: aproximádamente 1 mes
-        other: aproximádamente %{count} meses
+        one: aproximadamente un mes
+        other: aproximadamente %{count} meses
       less_than_x_minutes:
-        one: menos de 1 minuto
+        one: menos de un minuto
         other: menos de %{count} minutos
       x_days:
-        one: 1 día
-        other: '%{count} dias'
+        one: un día
+        other: '%{count} días'
       x_minutes:
-        one: 1 minuto
+        one: un minuto
         other: '%{count} minutos'
       x_months:
-        one: 1 mes
+        one: un mes
         other: '%{count} meses'
       x_seconds:
-        one: 1 segundo
+        one: un segundo
         other: '%{count} segundos'
