Removing translation continuations

--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -177,7 +177,7 @@ es-CL:
   no_submissions: ¡Parece que aún no intentaste resolver este ejercicio!
   no_useful_result: ¿No encontraste lo que estabas buscando?
   not_found: ¡La página que buscaste no existe!
-  not_found_explanation: Fíjate si escribiste bien la dirección. Peeeeero...
+  not_found_explanation: Fíjate si escribiste bien la dirección.
   not_in_any_organizations: ¡Parece que no estás en ninguna organización todavía!
   notify_problem_with_exercise: Reporta un bug
   office: Secretaría
