--- a/lib/mumuki/laboratory/locales/pt.yml
+++ b/lib/mumuki/laboratory/locales/pt.yml
@@ -177,7 +177,7 @@ pt:
   no_submissions: Parece que você ainda não tentou resolver este exercício!
   no_useful_result: Não encontrou o que estava buscando?
   not_found: A página que você pesquisou não existe!
-  not_found_explanation: Olhe se você escreveu o endereço corretamente. Mas...
+  not_found_explanation: Olhe se você escreveu o endereço corretamente.
   not_in_any_organizations: Parece que você ainda não está em nenhuma organização!
   notify_problem_with_exercise: Relatar um erro
   office: Secretariado
