--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -184,7 +184,7 @@ es:
   no_submissions: ¡Parece que aún no intentaste resolver este ejercicio aún!
   no_useful_result: ¿No encontraste lo que estabas buscando?
   not_found: ¡La página que buscaste no existe!
-  not_found_explanation: Fijate si escribiste bien la dirección. Peeeeero...
+  not_found_explanation: Fijate si escribiste bien la dirección.
   not_in_any_organizations: ¡Parece que no estás en ninguna organización todavía!
   notify_problem_with_exercise: Reportá un bug
   office: Secretaría
