Avoding redundant messages

--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -28,7 +28,7 @@ en:
   back_to_mumuki: Back to Mumuki!
   bibliotheca_ui: Bibliotheca
   birthdate: Birthdate
-  blocked_forum_explanation: You are not allowed to see this content. <br> Are you in the middle of an exam right now?
+  blocked_forum_explanation: Are you in the middle of an exam right now?
   cancel: Cancel
   cancel_subscription: Cancel your subscription.
   chapter: Chapter
