--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -27,7 +27,7 @@ es-CL:
   back_to_mumuki: ¡Vuelve a Mumuki!
   bibliotheca_ui: Biblioteca
   birthdate: Fecha de nacimiento
-  blocked_forum_explanation: Es decir que no tienes autorización para ver este contenido. <br> ¿Puede que estés en medio de un examen?
+  blocked_forum_explanation: ¿Puede que estés en medio de un examen?
   cancel_subscription: Cancela tu subscripción.
   chapter: Capítulo
   chapters: Capítulos
