--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -29,7 +29,7 @@ es:
   back_to_mumuki: ¡Volvé a Mumuki!
   bibliotheca_ui: Biblioteca
   birthdate: Fecha de nacimiento
-  blocked_forum_explanation: Es decir que no tenés autorización para ver este contenido. <br> ¿Puede que estés en medio de un examen?
+  blocked_forum_explanation: ¿Puede que estés en medio de un examen?
   cancel: Cancelar
   cancel_subscription: Cancelá tu subscripción.
   chapter: Capítulo
