--- a/lib/mumuki/laboratory/locales/pt.yml
+++ b/lib/mumuki/laboratory/locales/pt.yml
@@ -29,7 +29,7 @@ pt:
   back_to_mumuki: Voltei para Mumuki!
   bibliotheca_ui: Biblioteca
   birthdate: Fecha de nacimiento
-  blocked_forum_explanation: Você não tem permissão para ver este conteúdo. <br> Você está no meio de um exame agora?
+  blocked_forum_explanation: Você está no meio de um exame agora?
   cancel: Cancelar
   chapter: Capítulo
   chapters: Capítulos
