--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -293,7 +293,7 @@ es:
   view_details: Ver detalles
   want_permissions: El siguiente usuario requiere permisos
   we_miss_you: ¡Te extrañamos!
-  welcome: Te damos la bienvenida a %{name}!
+  welcome: ¡Te damos la bienvenida a %{name}!
   will_paginate:
     previous_label: "&#8592; Anterior"
     next_label: "Siguiente &#8594;"
