Add message for unlocked avatar on guide corollary

--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -254,6 +254,7 @@ en:
   to_solved: Mark as solved
   unauthorized_explanation: You have no permissions for this content. Maybe you logged in with another account.
   undo_upvote: Undo upvote
+  unlocked_medal_as_avatar: You earned this medal! You can now choose it as an avatar.
   unspecified: I'd rather not say
   unmeet_expectations: "Goals that weren't met"
   unprepared_organization_explanation: This path hasn't started yet.
