--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -267,6 +267,7 @@ es-CL:
   unauthorized_explanation: ¡Ups! Esto es lo que se conoce como %{error}, es decir que no iniciaste sesión.
   uncategorized: No categorizado
   undo_upvote: No es útil
+  unlocked_medal_as_avatar: ¡Obtuviste esta medalla! Ya puedes elegirla como avatar.
   unspecified: Prefiero no decirlo
   unmeet_expectations: Objetivos que no se cumplieron
   unprepared_organization_explanation: ¡Este recorrido aún no ha comenzado!
