--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -143,6 +143,7 @@ es-CL:
   locked_content: 'Éste contenido se desbloqueará cuando termines los capítulos anteriores'
   male: Hombre
   manual_evaluation_pending: ¡Gracias por enviar tu solución! Tus docentes la corregirán pronto
+  medal: Medalla
   message_count:
     one: 1 mensaje
     other: '%{count} mensajes'
