--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -103,6 +103,7 @@ es-CL:
   first_name: Nombre
   forbidden_explanation: ¿Puede que hayas ingresado con una cuenta incorrecta?
   format: Dar formato
+  forum_terms_link: Si tienes alguna duda, consulta las %{terms_link}
   fullscreen: "Pantalla completa"
   gender: Género
   get_messages: "Ver mensajes"
@@ -257,6 +258,8 @@ es-CL:
   tell_us_how: ¡Cuéntanos cómo te pasó esto!
   tell_us_if_our_error: Si piensas que es un error nuestro, %{issues}
   terms_and_conditions: Términos y condiciones
+  terms_and_conditions_continue_disclaimer: Al continuar aceptas los %{terms_link}
+  terms_and_conditions_must_be_accepted: Tienes que aceptar los términos y condiciones
   test_results: Resultados de las pruebas
   time_since: "hace %{time}"
   time_left: Te quedan
