--- a/lib/mumuki/laboratory/locales/pt.yml
+++ b/lib/mumuki/laboratory/locales/pt.yml
@@ -132,6 +132,9 @@ pt:
   item_not_accessible: Você não tem permissões para acessar este conteúdo
   joining_html: Bem-vindo ao curso <strong> %{curso} </strong>!
   kids_default_success: Você fez muito bem!
+  kindergarten_passed: "O seu programa é muito bom!"
+  kindergarten_failed: "Houve um erro no seu programa. Tenta novamente!"
+  kindergarten_aborted: "Opa! Houve um problema técnico"
   language: Linguagem
   languages: Linguagens
   last_name: Sobrenome
