--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -130,7 +130,10 @@ en:
   keep_learning: Keep learning!
   kids_default_success: You did it great!
   kindergarten_passed: "Your program worked great!"
+  kindergarten_passed_with_warnings: "Your program worked great!"
+  kindergarten_pending: "There's an error in your program. Try again!"
   kindergarten_failed: "There's an error in your program. Try again!"
+  kindergarten_errored: "There's an error in your program. Try again!"
   kindergarten_aborted: "Ups! Something went wrong"
   language: Language
   last_name: Last Name
