--- a/lib/mumuki/laboratory/locales/pt.yml
+++ b/lib/mumuki/laboratory/locales/pt.yml
@@ -133,7 +133,10 @@ pt:
   joining_html: Bem-vindo ao curso <strong> %{curso} </strong>!
   kids_default_success: Você fez muito bem!
   kindergarten_passed: "O seu programa é muito bom!"
+  kindergarten_passed_with_warnings: "O seu programa é muito bom!"
+  kindergarten_pending: "Houve um erro no seu programa. Tenta novamente!"
   kindergarten_failed: "Houve um erro no seu programa. Tenta novamente!"
+  kindergarten_errored: "Houve um erro no seu programa. Tenta novamente!"
   kindergarten_aborted: "Opa! Houve um problema técnico"
   language: Linguagem
   languages: Linguagens
