--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -149,6 +149,7 @@ es:
   lessons: Lecciones
   lesson_number: Lección %{number}
   let_us_know: ¡Por favor avisanos!
+  level: Nivel
   loading: Cargando
   load_solution_into_console: Cargar la solución en la consola
   locked_content: 'Este contenido se desbloqueará cuando termines los capítulos anteriores'
