--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -95,6 +95,7 @@ en:
   exercise_number: Exercise %{number}
   exercise_success_rate: Exercises success rate
   exit: Exit
+  exp_points: experience points.
   expectations: Expectations
   expected_state: Expected board
   explain_redirect: You have registered in another organization
@@ -290,6 +291,7 @@ en:
   working: "Working"
   wrong_answer: The answer is wrong
   years: years old
+  you_earned: You earned
   you_must_sign_in_before_submitting: You must sign in before submitting your solutions
   you_never_submitted_solutions: It seems that you've never submitted solutions since you created your account.
   your_new_organization: your new organization
