--- a/lib/mumuki/laboratory/locales/pt.yml
+++ b/lib/mumuki/laboratory/locales/pt.yml
@@ -97,6 +97,7 @@ pt:
   exercise_success_rate: Taxa de sucesso em exercícios
   exercises: Exercícios
   exit: Sair
+  exp_points: pontos de experiência.
   expectations: Objetivos
   expected_state: Tabuleiro esperado
   explain_redirect: Percebemos que você se registrou em outra organização.
@@ -287,5 +288,6 @@ pt:
   working: Processamento
   wrong_answer: A resposta não é correta
   years: anos
+  you_earned: Você ganhou
   you_must_sign_in_before_submitting: Você deve fazer o login antes de começar a enviar suas soluções
   your_new_organization: sua nova organização
